--- a/lab/flash/graphics/2015-04-16-Rippler.md
+++ b/lab/flash/graphics/2015-04-16-Rippler.md
@@ -1,9 +1,11 @@
-﻿---
+---
 layout: page
 title: Actionscript Rippler Effect
 tagline: Flash Lab
 ---
 {% include JB/setup %}
+
+## NascomASLib Contributors.
 
 {% highlight actionscript %}
 
