--- a/fav/diary/docs/2015-09.md
+++ b/fav/diary/docs/2015-09.md
@@ -9,8 +9,53 @@
 
 ## 第36周
 
+人的头脑太复杂，时间过得久，有时候连自己也被自己骗了，记下来才是最真实的……
+
+### 倒车
+
+三天的假期，只可用苦闷二字形容。早上开车140分钟，创历史记录。
+
+上班的状态也一般，主要的精力还是在整理文件。这些年一直在为自己挖坑，回头望去，满目疮痍。希望能用整个第四季度，把它们一一填平。书还是要读，但知识的整理不能欠债，比钱难还。
+
+从某TXT小说下载站，淘到一个排版还不错的秽本，用了大半个下午，编辑为mobi格式。幻想也要有点水平。梁君先生还改编了一部评书，删除了**自然主义的生活镜头**，谓之洁本，闲时亦可欣赏。
+
+金瓶梅开创了文人独立创作的先河，传王世贞著，其文学造诣不亚于红楼梦，看来王比曹才华更甚。封神演义比西游记晚，但艺术价值和社会意义，相差太远。人和人之间，是有区别的。
+
+晚上19:30倒车，竟然深踩油门，车子猛的后蹿，停下来的时候，后雷达已经开始报警。
+
+2015年9月6日
 
 ## 第37周
+
+### 帝女花
+
+今日限行，乖乖的选择地铁。
+
+因刘珺儿的缘故，对粤剧产生了浓厚的兴趣，对唐涤生、任剑辉、白雪仙的作品，更是顶礼膜拜，费尽一番心思，终于下载到《帝女花》、《再世红梅记》，还有汪明荃、郑少秋的《紫钗记》，无损音乐。鬼才不负其名，任白无法超越。
+
+小时候在电视中也看过粤剧，虽完全不懂她们在唱什么，但能真切的感受到舞台的美。
+
+我对粤语有天然的爱，在喜马拉雅上发布粤语古诗诵读的漏风独雨老师，原来不是广东人，部分字音不准，但听起来还是一种享受。
+
+喜马拉雅手机版体验不错，内容更好，关注对象从最初白云出岫夫妇到现在，已经增长到21位，对我这眼睛快瞎的人来说，是福音。2013年我读到一半的《[南渡北归](http://www.ximalaya.com/#/14528933/album/284484)》第一部，全勇发布，感谢！
+
+微博，豆瓣，马蜂窝，汽车之家，还有这喜马拉雅，网友自发产生大量优质原创内容，未来不可限量，而58同城等分类信息网站，能够解决老百姓的生活需求，也是实力派战将。而我们的网站群，生存太艰难了。
+
+这篇日记是在纸上写的，假期练字，全无效果，丑。
+
+*** 
+
+任剑辉&白雪仙之帝女花
+
+香港娱乐唱片公司的录音技术认真了得！1960年录制的音质、音效一点都不比现在的差。 
+
+专辑曲目: 
+
+1. 庵遇
+2. 相認
+3. 香夭
+
+2015年9月7日
 
 ### 老祖寺
 
@@ -27,7 +72,7 @@
 
 最终的网站维护者，是寺院的师父，他们的计算机水平，应该在普通的网友之上，IT从业者之下。
 
-靡不有初，鲜克有终，今天我们在这里启动这个项目，开发、测试完成之后，我们还要负责初期的运维。以后无论大家走到哪里，都可能会因为这个项目重新聚合在一起。
+靡不有初，鲜克有终，明天，我们将正式启动这个项目，开发、测试完成之后，我们还要负责初期的运维。以后无论大家走到哪里，都可能会因为这个项目重新聚合在一起。
 
 我们会在Github上开放源码，需求框架以现有的页面为基础，但是我们也会融入自己的思想。
 
@@ -39,4 +84,46 @@
 * 搜索
 * 静态化
 
+*** 
+
+亲子网京东APP广告，需要真实的安装、浏览、点击，真的束手无策，惊动丛生了。
+
+今天开通日记版块，图标为纸飞机，以后的博客，重点关注读书、技术，碎碎念写在Markdown文件中，注意简洁，时间宝贵。缺点是不支持全文检索。
+
 2015年9月8日
+
+### 借书
+
+我读书不多，买的书却太多了，家里的两个书架，办公的抽屉，还有那个铁皮文件柜，都塞得水泼不进。
+
+真不知我离职之前，能否有一个像样的书房，把存放在公司的书规置好。车是有了，但是房子，比车难太多了。
+
+这世界上大概再没有比只藏书而不读书更蠢的事情了。而没怎么读，却把双眼几乎弄瞎，更是深深的悲哀。
+
+买书最初的动力，来自2007年学习编程，那些书到现在都没有完全读完，但我一本也舍不得抛弃，那是一段历史的见证。等我有了自己的队伍，不再需要亲手编码之后，我开始沉迷文史相关的书籍，我百分之八十的藏书，都是这个类别。
+
+我能悟通编程，多亏富益视点，最初我个人出资办卡借阅，每个月都疲惫的穿行在借书和还书的路上，不求甚解，但也理清了筋络。后来我向公司申请办理银卡，可以借更多的书，同事本一起学习：
+
+> **申请**
+
+> 当今互联网络发展日新月异，为了应对前沿需求和挑战，使员工掌握新型技术以及了解网络新动向。北京研发中心申请，续海淀图书城借书证，以利用空余时间为自己充电。
+> 
+> 图书单位：海淀图书城富益视点图书有限公司 （62534494）
+> 
+> 借书证费用：650元 备注：其中500元为借书费用，150元为押金
+> 
+> 申请人 RW
+> 
+> 2010.8.31
+> 
+> 部门经理签字：CZX
+> 
+> 行政部 审核：WXJ
+
+但其后相当长的时间，还是我一个人在借书、看书，我没能学到精湛的编程技艺，却籍此培养了良好的研发感觉。到2013年前后，我不再借书，而是直接用年费购买，取发票回公司报销，于是这两年，又收藏了很多新书，真的很新。
+
+假前的那个下午，我再去富益视点，原书店变成了东东的奶茶房。
+
+联系电话62534494 ，已经打不通了。
+
+2015年9月9日
