--- a/fav/diary/docs/2015-09.md
+++ b/fav/diary/docs/2015-09.md
@@ -23,6 +23,8 @@
 
 晚上19:30倒车，竟然深踩油门，车子猛的后蹿，停下来的时候，后雷达已经开始报警。
 
+新手开车，有时候反而是一种折磨，每次我在望陶园平安的停好车，收件书包回家的时候，都会长长的舒一口气，那感觉，就像是又和敌人打了一场惨烈的战斗，而我，没有受伤。
+
 2015年9月6日
 
 ## 第37周
@@ -84,9 +86,25 @@
 * 搜索
 * 静态化
 
-*** 
+### 广告
 
 亲子网京东APP广告，需要真实的安装、浏览、点击，真的束手无策，惊动丛生了。
+
+电脑和汽车的销售，我觉得有些保守，但是亲子的这帮兄弟姐妹，他们是不要命的。
+
+2015年9月8日
+
+### 风扇
+
+关于Mac的无风扇设计，很多网友在纠结，我要不要买一个外接的风扇啊，机器太热烧坏了多心痛？
+
+我的想法是这样的，不要小看 Apple 的工艺设计。或者你去 Apple Store 零售店看一下，有无官方生产，或者官方推荐的风扇出售，如果没有，就不要考虑了，某宝上百元的风扇，也只能拉低 Mac 的品格。
+
+如果还是不放心，我再给你讲个故事。
+
+初夏的中午，我在客厅里静坐读书，感觉稍微有点热，但完全可以接受，只是你不乐意了，坚持要我去一公里外的山泉取水，擦脸洗手以降温。于是下午一点，我顶着太阳步行四十分钟，大汗淋漓的拎着一桶10升的冰泉回来，洗了个脸，真的是凉快啊！
+
+2015年9月8日
 
 今天开通日记版块，图标为纸飞机，以后的博客，重点关注读书、技术，碎碎念写在Markdown文件中，注意简洁，时间宝贵。缺点是不支持全文检索。
 
@@ -127,3 +145,5 @@
 联系电话62534494 ，已经打不通了。
 
 2015年9月9日
+
+
