--- a/fav/diary/docs/2015-09.md
+++ b/fav/diary/docs/2015-09.md
@@ -106,6 +106,8 @@
 
 2015年9月8日
 
+### 新日志
+
 今天开通日记版块，图标为纸飞机，以后的博客，重点关注读书、技术，碎碎念写在Markdown文件中，注意简洁，时间宝贵。缺点是不支持全文检索。
 
 2015年9月8日
@@ -146,4 +148,64 @@
 
 2015年9月9日
 
+
+### 雨伞
+
+现在手上的把天堂伞，2013年6月9日订购于京东：天堂伞 3331E碰一甩干自开自收三折超轻伞深藏青色，呃，这个名字断句有难度，一次买了两把，当时的价格是单把59，今天看时，已经降到42了。
+
+其实我挺喜欢这个型号，大方稳重，使用方便。同时买两把的原因，是想一放公司，一放家里，这样无论何时下雨，都不慌忙。但是今年三月份， 我发现其中的一把伞骨弯了，尽了全力也没能修好，还差一点折断了。特别怀念小时候下乡修伞的师傅，他们肩挑配件走乡窜村，是那个时代特有的风景。
+
+为什么会坏，我一直搞清楚，我没有顶风行走，也没有受过外力的重创，伞骨怎么会变形呢？
+
+直到昨天，我发现第二把伞也同样的伤了伞骨，我才明白了。上一次下雨，到公司之后，我像其它同事一样，把伞撑开放在过道。但下班后天晴了，我忘记了把伞收回来。周二和小赵哥在过道的小圆桌上开会，才看到自己的伞放在桌上，不是自动收拢的，绳扣紧紧的缠着，我打开重新收好，当时也没有留意到什么地方坏了。但我估计行政的同事在收伞的时候，肯定也纳闷，这伞怎么这样难收，明明掰回来了，一松手就又撑开了，只能用扣子缚住，这样的操作，别说伞骨变弯，就是折断了也不足为奇。
+
+自开自收本是便捷的设计，但是如果交给不会使用的人，就是一种灾难了。也不能怪同事，毕竟自开的伞比较常见，自收的伞实在太少了。
+
+而真正的高档伞，可能还是会手动的，像平儿用的：Kobold 酷波德遮阳伞三折折叠铅笔晴雨伞太阳伞防紫外线全遮光3028 启门蓝，¥298.00。
+
+现在想来，这把天堂伞其实一甩就干，根本不用凉在过道，都怪我。伞还是不错的，我又重新订购了一对，深紫和藏青，优惠后¥86.00。
+
+昨天晚上给平儿的妈妈打电话，她们都在四姨家里，再三嘱咐下雨不要开车，备好雨伞。想起我们现在的处境，无限苦楚和心酸，小时候买不起伞固然痛苦，但不至于刻骨。
+
+2015年9月10日
+
+### 聚超值两周年
+
+这两天好多同事在朋友圈转发聚超值2周年剁手视频，作为十年员工，我很不称职的没有转，但是我坚持看完了，3分30秒，感觉漫长得像3个小时。我留意了一下播放数，103，当时是晚上11点。
+
+唯一的一条评论：真够无聊的
+
+无言。
+
+今天上午看，播放数涨到 3217，12:37，增加了一条评论：哈哈哈哈
+
+前景无望，不知还能坚持多少年。现在就是害怕，如果从这里出来，我能做什么，其实没有真正的实力。
+
+2015年9月10日
+
+### 洗衣服
+
+昨天换了一件衬衫，白底+蓝色竖纹，看起来干净清爽，但中午的时候，突然发现至少四处污渍，像上飞溅的石榴汁，可是我好久都没有吃石榴了，平儿在香山买的石榴还有两个最大的放在家里啊！
+
+今年买了两件新的短袖衫，这是第二件被污染的了，第一件红色的只是口袋下方有一点点印子，当时洗了半个下午，终于看起来不太明显了，但是，这件是浅色的啊！
+
+回到家之后，给平儿打完电话，就赶紧接水清洗，硫磺皂，牙膏，洗衣液，透明皂，家里所有具备清洁能力的产品，都试过了，效果都不好，最后只好用透明皂液浸泡一个晚上，但是早上起床晚，来不及认真的搓，不过看起来好像是徒劳。现在是用清水泡着，晚上回去做最后的努力。
+
+难不成我只能穿黑色的衣服？好像没有几件幸免的。还记得初二的暑假补课，新买的一件水红色衬衫，在睡午觉的时候，袖子上染了一大块蓝色墨水，用了两个中午，借助汽油，终于洗干净了。我很喜欢那件衣服，至少陪伴我四年以上。唉，也就是说，我四年没有长个儿。
+
+以后在家里干活，或者吃东西的时候，我都穿上专用的旧装吧。
+
+2015年9月10日
+
+### 锁车窗
+
+现在天气转凉了，驾车不用再开空调，但通风是开前窗呢，还是后窗？
+
+前窗，前窗，前窗！
+
+上周五为了听评书更清楚，我开了后窗，下车的时候，直接拔钥匙走人，好在强迫症发作，回头检查了一下：
+
+后窗没锁！
+
+2015年9月10日
 
