--- a/fav/diary/docs/2015-09.md
+++ b/fav/diary/docs/2015-09.md
@@ -209,3 +209,84 @@
 
 2015年9月10日
 
+### 洗车
+
+提车四个月了，自己正经洗车，也就一次，两次修车，4S店送洗两次，其它时间雨意延绵，就一直这么脏着。下午看天气不错，墨迹也提示非常适宜洗车，于是就把车开到乐之道。
+
+洗车的小伙子说，不能在场内排队，我只好开到管村路上再找机会左拐，不想下午四点多，路上的车多的要命，我斜在路边儿，也给过往的车辆通行造成一定的问题。前面还排了两辆车，车内的温度也降下来了，于是我灭了火。后来发现右侧似乎还有空间，于是重新打车向边儿上靠，却发现显示屏升不起来了，重新打火也不行，手动升降也失效，当时就急得满头大汗，这可怎么整，前后左右都是车，没有倒影不是作死吗？打销售的电话，一时也打不通，但就算通了，他也不一定能解决问题啊！想上网搜索一下，手机又没网络，痛苦难当。
+
+二十多分钟过去了，前面的两台车都洗完了，我找个空档，提心吊胆的发车，小心翼翼的后倒，硬着头皮左转，对倒影的依赖实在太重了。唯一值得安慰的是，显示屏升不起来了，但是雷达还能工作，如果离障碍物过近，还是会有声音提示。进洗车位还好，毕竟有人指挥，我停好车，站在一边看师傅用高压水枪冲洗车身，自己内心无比焦虑，难道明天我不上班修车去？
+
+不到五分钟，就冲洗完毕，我回到车内，还给师傅打了个招呼，一会儿倒车的时候帮我看下，但没想到，重新点火，显示屏又升起来了。难道是电脑一时之间卡壳了？
+
+擦车的时候，销售给我回了电话，我告知他我遇到的问题，销售如果说多次出现，就开到店里检测一下。
+
+这里洗车20元一次，谈不上好，但也算热情，我请他们把引擎盖上的胶给我洗一下，他们也很爽快的答应了。但推销总是少不了的，说的车漆上树胶过多，以后可能要全部重新喷漆，建议我做镀晶（我当时没听明白，还以为是镀金），我推辞了，问他现在还能有什么办法在楼内买到一个车位，他说要他们老板，我才知道之前给我办证的应该只是主管。老板每天八点左右过来上班，下午一般不在，我一定要尽早找到他，哪怕多出几千块钱，能谋到一个室内的车位，我都是乐意的。
+
+洗完车之后，我又把车内的物什整理了一下，没几分钟，引擎盖上又落了鸟粪，找出喷壶，接了点自来水，发现喷水有问题，拧开盖子一看，那个吸管没了……来来回回在路上寻了三次，也没有找到，难道是上次倒水的时候就丢了？没了这根管子，这个壶也差不多成了废物，不得已弃之。真是松了一颗螺丝，亡了一个国家。
+
+由于刚才和洗车的小伙聊得过于开心，他都忘记收钱了。我把洗车卡送回去给他签了日期，就转身买菜去了。
+
+心情复杂。
+
+2015年9月13日
+
+### 练习毛笔字
+
+书法之法，是为法则。
+
+看了五集田蕴章先生的《每日一题 每日一字》，之前买的一得利（**一得阁**？）墨水还在，于是从厨柜里找出一只逐鹿的小碟子，倒了少许墨水，笔筒中取出真彩的小白云，练习田先生指导的五个字：
+
+* 永
+* 火
+* 必
+* 右
+* 有
+
+这前几讲，先生重在教笔顺，后三个字，我三十年没有写对过。
+
+* [田蕴章书法讲座 每日一题每日一字365集全001-200](http://www.youku.com/playlist_show/id_3937849.html)<sup><i class="fa fa-external-link fa-fw"></i></sup>
+* [田蕴章书法讲座 每日一题每日一字365集全201-365](http://www.youku.com/playlist_show/id_3974146.html)<sup><i class="fa fa-external-link fa-fw"></i></sup>
+
+附：[田蕴章天津电视台书法讲座50集](http://www.youku.com/playlist_show/id_3939720.html)<sup><i class="fa fa-external-link fa-fw"></i></sup>
+
+至少有一年多没有碰过毛笔了，写的字根本没法看，而且笔划不齐，横和捺都有波纹，我的手也不抖，于是重看第四集，先生讲了选笔的方法：
+
+* 楷书应该选兼毫（羊毫和狼毫兼参，狼毫取黄鼠狼尾巴上的毛，没有长锋笔，楷书宜用短锋）
+* 紫毫笔特别柔健（产地宣城，唐朝宫廷用笔，欧阳询等用的就是这种笔，没有长锋）
+* 宋代始盛行羊毫
+
+想起家里还收藏了一支购于罗高的**加健羊毫**，笔头粗大，具体是几号笔，我也不清楚。修好之后蘸墨试写，果然比真彩小白云好太多。
+
+认真练习了半小时，初见效果，希望以后能坚持。
+
+2015年9月13日
+
+## 第38周
+
+### 限行
+
+早上06:00出门，06:07左右发车，到中关村大概06:40，锁车的时候，看了一下仪表盘，整个行车时长45分钟。
+
+那么就是这样：
+
+限行的时候，六点出门，不限行则七点出门。
+
+2015年9月14日
+
+### 书单
+
+周末整理了Kindle上的电子书，开具了一张[书单](http://chenzixin.com/2015/09/5777.html)，入手Kindle快两年了，真正在Kindle上读完的书不多，但是收藏的书实在不少，如果没有一张清单，我都不清楚自己到底向亚马逊云端推送了多少内容。
+
+书单的制作分为两步，先在纸上抄录一次，为此把英雄100的墨水用干，然后在录入电脑，因为各收藏夹之间有重叠，我根据记忆排重，没有详细核对，初步统计超过300本，说实话，闭眼之前能读完，已经相当不容易了。今后不会轻易上传新书，不能再陷入一个**搜索-下载-转换-上传-删除**的怪圈。
+
+这些书都是最近一年精挑细选的结果，结合有声读物，差不多可算作半个读书人。人和人之间是不同的，书亦然，即便是公认的好书，有些读一半即可，有些看一遍就行，还有的，值得用一生反复阅读。最近半个月，一直在思考这个问题，[知乎](http://www.zhihu.com/question/19552333)<sup><i class="fa fa-external-link fa-fw"></i></sup>也有知友给出了中肯的建议，该删减浮华，静心开始了。
+
+艺无止境，人生无止境的还太多。感谢马三立、刘立福、田蕴章先生，你们从不同的角度，在我精神迷惘的时候，支撑了我的信念。
+
+2015年9月14日
+
+
+
+
+
