--- a/fav/diary/docs/2015-09.md
+++ b/fav/diary/docs/2015-09.md
@@ -286,6 +286,35 @@
 
 2015年9月14日
 
+### 室内车位
+
+今天早上进车场的时候，发现乐之道的老板已经上班了，冒着迟到的危险，我敲门进去了，询问排队的事情，能否加点钱插个队什么的，老板说车位就那么多，加钱了车也不能摞着停。要不你先登记一下：
+
+* 几号楼的
+* 车牌号码
+* 联系电话
+
+我一听坏了，还是必须望陶园的，正犹豫间，老板从抽屉里拿出一踏便签，都是排队的，我只好说我不是望陶完的，是26号院的，那是不是更没戏了？老板也说，登记基本没什么用。
+
+按说到这里我转身出来就没事了，不知道为什么说到树胶的话题上，老板问我现在停哪儿呢，我说就停在前面的空地上，问一天一缴钱啊？我答办了半年的停车卡，钱给谁了，给谁谁了，然后他问我的车号，我只好告诉他，他记在纸上。
+
+完了，我感觉我现在的车位，可能都无法续期了？
+
+心情烦闷，看看《石鼓文》吧：
+
+* [车工第一](http://wenku.baidu.com/view/8c1445630b1c59eef8c7b43f.html)
+* [汧沔第二](http://wenku.baidu.com/view/555946fdc8d376eeaeaa3169.html)
+* [田车第三](http://wenku.baidu.com/view/e8bfdeeeaeaad1f346933f69.html)
+* [銮车第四](http://wenku.baidu.com/view/8cc679f34693daef5ef73d69.html)
+* [霝雨第五](http://wenku.baidu.com/view/58e2be8884868762caaed599.html)
+* [乍原第六](http://wenku.baidu.com/view/b36e5e1fb7360b4c2e3f6499.html)
+* [而师第七](http://wenku.baidu.com/view/3e5ac937ee06eff9aef80799.html)
+* 第八鼓缺
+* [吾水第九](http://wenku.baidu.com/view/68309e6baf1ffc4ffe47ac0c.html)
+* [吴人第十](http://wenku.baidu.com/view/01b75821dd36a32d7375810c.html)
+
+2015年9月15日
+
 
 
 
