--- a/fav/diary/docs/2015-09.md
+++ b/fav/diary/docs/2015-09.md
@@ -319,7 +319,7 @@
 
 上午整理了Chrome的收藏夹，把折叠的那部分，或删除，或转存Note，终于清爽了。留在导航栏的那部分，以后要不定期浏览，它们代表了我的志趣。Chrome、Sony M10、Kindle、Thunderbird，这是我开眼看世界的四扇窗口，“时时勤拂拭，勿使惹尘埃”。
 
-金豪+E 精英版 黑色W09-01 中午到货了，总体感觉满意，希望这是一笔有价值的投资。但就算有好的椅子，也是要经常起身走动的，现在眼看着各方面都在步入正轨，从明天开始，坚持 45 + 15 的工作模式。
+金豪+E 精英版 黑色W09-01，12:00 到货了，总体感觉满意，希望这是一笔有价值的投资。但就算有好的椅子，也是要经常起身走动的，现在眼看着各方面都在步入正轨，从明天开始，坚持 45 + 15 的工作模式。
 
 中午重新整理了书法稿纸，钢笔米字，钢笔田字，毛笔米字，都有了，下班后研究一下双面打印。昨天晚上用新买的武京生六号兼毫试写楷书和隶书，笔不错，相对之前那支旧的加健羊毫，要软一些，但适应一下就好了。只可惜我的楷书还是不得其门而入。请出刘炳森先生的隶书，感觉稍好一些，但刘先生的笔意目前还掌握不了，最后只好重新找出卢定山先生的字谱，认真临写了半个小时，还有那么一点味道。这是一个很大的进步，之前我都无法用毛笔书写隶书。
 
@@ -327,5 +327,154 @@
 
 听田蕴章先生的讲座，知道王羲之也是有师承的，他的入门老师是卫夫人。赵孟頫的妻子管夫人也是书法大家。现代书坛，孙晓云和解小青，田先生都给了很高的评价。卫夫人“规摹钟繇”，从百度文库中下载了钟繇五表收藏。
 
+再记一件虐心的事情，昨天晚上回家，抱着平儿寄来的本地洋桃，开门之后，又把钥匙忘在锁孔里了。我大概9点到家，10点半左右，门铃响了，当时我就下意识的看了看钥匙在哪儿，果然，是邻居的媳妇儿，告诉我钥匙还在门上，感谢！
+
+这是第三次做这样的蠢事了。第一次是刚结婚不久，从西站提了六佬带过来的菜籽油，大概也是双手不闲，把钥匙忘在门上了。当时也有邻居按铃提醒，不知怎么我愣是没去开门，后来就换锁了。第二次是某天早上出门上班，发现钥匙不见了，开门一摸，还在门外插着呢，敢情一晚上都没有拔。纠结痛苦了很久，坚持没有换锁。
+
+我对自己真的无话可说，才换的C级锁不久啊！百度了一下：“C级钥匙好配吗”，有说容易，也有说不易，但这次毕竟是晚上九点多，就算有人把钥匙拿走，配完再插回来，也不是一件很容易的事情。
+
+长点心吧！
+
+
 2015年9月16日
+
+### 冰箱
+
+陈自新  9:24
+
+王工，我昨天看一下咱们20楼的冰箱，里面还有2012年生产的沙拉酱……
+估计很多同时喜欢把东西放冰箱暂时放着，后来就忘记了，再后来又离职，占用空间又不卫生
+
+陈自新  9:25
+
+建议定期清理，而且这冰箱也已经很多年头了
+
+王晓俊  9:25
+
+我们是隔段（王工的原话是：隔断，呵呵）时间就清理一次呢。我问一下
+
+陈自新  9:27
+
+我昨天就扔了两瓶酱，都三年以上了，保质期都是12个月左右的，冰箱的储物格子和瓶子底接触的部分，很脏很脏。
+还有半瓶矿泉水，快三个月了，一直在那儿放着 
+
+王晓俊  9:28
+
+知道了
+
+陈自新  9:28
+
+多谢了
+
+王晓俊  9:29
+
+应该的。因为一直都有要求阿姨定期清理。我找阿姨问一下
+
+陈自新  9:30
+
+我估计阿姨也不敢轻易扔东西
+
+王晓俊  9:30
+
+嗯
+
+陈自新  9:30
+
+这个还要先和同事们说清楚，也算是一点公德
+
+王晓俊  9:30
+
+好的
+
+陈自新  9:30
+
+东西放多了还浪费电
+
+
+2015年9月17日
+
+### 差点撞人
+
+昨天昨上整理名帖至今日凌晨，听到窗外都下雨了，就想着周五不开车了，也不带中午，多睡一会儿。早上七点起床，煮了两盒米，蒸鸡蛋+老干妈，作为早餐，竟也捱到8点多才出门，肯定是迟到了，天气晴好，干脆开车吧，不曾想差点酿成大祸。
+
+过了彩虹门会车的时候，我向往常一样，尽量右靠，因为也听评书，也有一点走神，没注意观察右后视镜，突然就听到有人敲我的车门，说：“下来！”，我赶紧停车开双闪，从右侧车门下车，看到一老头儿在那里情绪激动，说你这人开车怎么这样，我是个一残疾人，你要把我撞坏了，你就摊上了！我吓得魂飞魄散，好在只是碰到了他的左手肘，而且车速很慢，没有带倒他。老人也实在，没有讹我，严厉批评之后，示意我赶紧走，万幸！这是我第一次开车碰到行人，希望也是最后一次。
+
+以后路况不好的时候，一次要集中精力开车，后来回忆这一段惊险，我在会车的时候，其实也在想之前历次路过这里的窘态，自然就不会观察前后左右的危险点，注意，行车过程中一定要观察：前，后，左，右。
+
+今天的主要还是在整理百度文库网友分享的名帖，这些资料非常珍贵，希望自己未来可以写一手好字。一切一切的努力，都是为了下一代，我的能力和运势，终是有限的，而孩子的教育，是第一位的。
+
+中午和同事一起在小豆面馆吃饭，我点的豆角盖饭，16元，偏甜，饭有些回生，真的不好吃。探讨开发相关的话题，ExtJS，SpringMVC，memcache，倒也有趣。以后也尽量多找一些机会和同事一起吃饭，不过要少谈技术。
+
+整理字帖到最后，竟然发现很多民国时期刻印的相声底本，像《传统相声开粥厂》，张寿臣、陶湘儒版，我昨天刚听了马三立先生的本子。真是人生无处不相逢！
+
+试听了张寿臣先生的部分相声，他的声音也亮，侯宝林也是这个套路。而马三立就是一个字：蔫。
+
+平儿在QQ空间连发了四篇日志，开始戴眼镜，揣摩冷漠和热情的度，反思自己的命运，还有妈妈换了一部荣耀4A。她现在的文笔真不错：
+
+> 妈妈换新手机了～华为荣耀4A，之前的诺基亚5230正式退役。
+> 也许没有比诺基亚更良心的手机品牌了。虽然，它已退出手机舞台，但它曾经的辉煌，值得无数人缅怀。拥有过它的人，永远不会后悔。我也会时常想念它。它，不仅仅是部手机，过硬的品质里面早已融入了那个时代最纯真质朴的情感。
+
+
+2015年9月18日
+
+## 第39周
+
+### 平儿回家
+
+平儿提前回北京了，家里有了女主人，才会真正像一个家。
+
+最开心的应该是毛毛，而我，则真的要思考，怎么才能和谐的相处了。
+
+希望以后，再也没有不开心。
+
+晚上看了电影：《窃听风云3》
+
+
+> 《窃听风云3》是由博纳影业集团领衔出品，香港导演麦兆辉、庄文强编剧兼执导，古天乐、刘青云、吴彦祖、周迅、方中信、叶璇、黄磊、陈嘉俊等演员主演的犯罪剧情片，讲述了香港一个豪门望族在涉足房产黑幕交易后的浮沉故事。2014年5月29日首映，首周末累计票房1.51亿元。2015年4月19日，曾江凭《窃听风云3》夺第34届香港电影金像奖最佳男配角，刘青云夺最佳男主角，麦兆辉、庄文强夺最佳编剧。
+
+[插曲](http://www.letv.com/ptv/vplay/20107691.html)<sup><i class="fa fa-external-link fa-fw"></i></sup>好听：
+
+> 在《窃听风云3》中想必大家对阿就(古天乐饰演)出狱后，几个陆家兄弟为他接风洗尘，一起把酒言欢，借着酒劲儿一起高歌的那段应该记忆犹新。五大天王在电影里面一起齐展歌喉，让很多人高呼过瘾。他们演唱的的是一首老歌《风云》，《风云》由顾嘉辉作词、黄沾作曲，本是1980年香港TVB同名电视剧《风云》的主题曲，用粤语演唱出来，非常带感。
+
+2015年9月21日
+
+### 草药
+
+今天早上去谋五种枝头：
+
+* 葡萄
+* 香棒
+* 杨柳
+* 石榴
+* 柿子
+
+其实还差两种：
+
+* 樱桃
+* 桃树
+
+但这两种可能要去采摘园了。
+
+找到了儿时看的连环画：《望夫云》，当然，只是图片。
+
+2015年9月22日
+
+### 再等的一分钟
+
+今日早上七点出门，车上一层土，从传达室里借了一只桶，简单的冲洗了一下车身，用刷子将玻璃上的土刷去，最后挨到七点二十五左右才发车，结果：
+
+迟到了！
+
+以后要开车的话，七点之前一定要出门。晚了就坐地铁吧。
+
+健康 涵养 能力 钱财
+
+我不仇富，也不笑贫，健康和涵养是可以努力争取的，能力可以逐步提升但终归有上限，钱财很重要，但不是自己想要多少就有多少，一半天定。
+
+平儿推荐的音乐：最近听了首好听的歌《再等的一分钟》
+
+一直在收集名帖，该住手了，静心练字，才是最重要的！
+
+2015年9月22日
+
 
