--- a/fav/diary/docs/2015-09.md
+++ b/fav/diary/docs/2015-09.md
@@ -427,7 +427,7 @@
 
 希望以后，再也没有不开心。
 
-晚上看了电影：《窃听风云3》
+晚上看了电影：《[窃听风云3](http://movie.douban.com/subject/10726941/)<sup><i class="fa fa-external-link fa-fw"></i></sup>》
 
 
 > 《窃听风云3》是由博纳影业集团领衔出品，香港导演麦兆辉、庄文强编剧兼执导，古天乐、刘青云、吴彦祖、周迅、方中信、叶璇、黄磊、陈嘉俊等演员主演的犯罪剧情片，讲述了香港一个豪门望族在涉足房产黑幕交易后的浮沉故事。2014年5月29日首映，首周末累计票房1.51亿元。2015年4月19日，曾江凭《窃听风云3》夺第34届香港电影金像奖最佳男配角，刘青云夺最佳男主角，麦兆辉、庄文强夺最佳编剧。
@@ -459,7 +459,7 @@
 
 2015年9月22日
 
-### 再等的一分钟
+### 等一分钟
 
 今日早上七点出门，车上一层土，从传达室里借了一只桶，简单的冲洗了一下车身，用刷子将玻璃上的土刷去，最后挨到七点二十五左右才发车，结果：
 
@@ -471,10 +471,39 @@
 
 我不仇富，也不笑贫，健康和涵养是可以努力争取的，能力可以逐步提升但终归有上限，钱财很重要，但不是自己想要多少就有多少，一半天定。
 
-平儿推荐的音乐：最近听了首好听的歌《再等的一分钟》
+平儿推荐的音乐：最近听了首好听的歌《[等一分钟](http://music.163.com/#/m/song?id=169741)<sup><i class="fa fa-external-link fa-fw"></i></sup>》
 
 一直在收集名帖，该住手了，静心练字，才是最重要的！
 
 2015年9月22日
+
+## 第40周
+
+### 程灵锟来京
+
+其实他上周五就打过招呼了，约好周一见面，黄凤鸣安排饭局，据说天津的赵玮也会赴约。
+
+> 陈总，晚18:30前到，满恒记火锅，主营正宗牛街清真风味铜锅涮羊肉、老汤羊蝎子、自制清真风味名吃！
+
+> 地址：西城区平安西大街赵登禹路口西南角（地铁四号线、六号线平安里站下车西南H出口往西180米）！
+
+本想提前下班过去，无奈本月的考勤实在难看，只好下班再走，还没打卡，程灵锟电话问我到哪里了，开车还是地铁。
+
+好在地铁很顺，出车站也好找，7:10左右，我就到了，赵玮没来，张诚到了。
+
+程灵锟的老婆是高三语文老师，他已经是一名奸滑的政商。
+
+和往常一样，我不会聊天，大多时间在埋头吃菜。我不喝酒，程黄两人干掉了三小瓶红星二锅头，最后退掉代驾，改由我开黄总的车挨个儿送他们回住处。
+
+三点八万公里的东风标致408，出车位还是黄总自己来的，那路太窄。一路上倒也还算顺利，只两个问题：
+
+* 最初因为紧张，浑身崩紧，轻微颤抖
+* 我完全不认识路，黄总全程导航，并线掉头都有真人语音提示，对，像驾校考试
+
+到了蒲黄榆，停车也是他自己来，我则步行经安乐林路回家。走过两个路口，接近新奥洋房。黄总的新居110多平，三居，据说首付100多万全是借的，贷款200多万。当时走了路子，评估和贷款，都是自己找人弄的，绕开了政策限制。原方庄的顶层小两居，在保有两年之后，出售，其间两启还贷。
+
+一想到房子，我就头痛。如果有能力搞定悠圣美苑的小高层，已经是不错的了。
+
+2015年9月29日
 
 
