--- a/fav/diary/docs/2015-10.md
+++ b/fav/diary/docs/2015-10.md
@@ -8,5 +8,54 @@
 
 
 
-## 第一周
-## 第二周
+## 第42周
+
+### 中国联通和中国银行
+
+下午去了联通和中国银行，当是散步。结果联通的机器系统瘫痪，说让我找卖手机的地方剪卡……我又不买手机，哪个卖手机的会好心剪卡？
+
+今天估计是中关村这边儿的网络有问题，公司的无线网络也不好。
+
+中国银行主要是去激活新的信用卡，注销旧信用卡。上午曾经试过电话激活，但一直座席全忙，去他们分行，工作人员也是打了很久电话，才接入人工。之后倒是顺利，销旧启新。
+
+我问这里是能安装ETC的机器吧？
+
+工作人员说，理论上可以，还没有安装过，把车开过来试试……还是另找时间在咱们家附近的营业点安装吧，我看安装指南上有草桥营业厅，反正这个也不太着急。
+
+关于车，今天一早给老婆的QQ消息：
+
+> 快哭了，今天开了1小时54分
+
+> 今天晚上我坐地铁回去了，这个周就把车停公司吧
+
+> 周五晚上开回去
+
+车于我，至少目前还是一个面子的问题，那，到今天为止，它已经给了我很足的面子。一切，该回归正常了！
+
+也记录一条工作信息：
+
+和健炜、学亮谈话
+
+我们的核心是提升自己的技术，而做服务有很多技巧，以给马玥装机为例，教育他们如何做好有口碑，且不缚累自己的技术服务。
+
+对关键性的、有价值的事情，我们会用200%的努力，做到让对方感动，永远记住我们，反之，我们不会轻易出手。
+
+过去一周，我也一直在听余世维先生的管理讲座，《执行力》已经听完，总结一下：用正确的人，把正确的事做正确。《宾客期望的酒店管理》，听到第二集中断了，讲得也不错，虽然我们不是开酒店的，但我们终归是做服务的，举一反三，仔细琢磨。
+
+2015年10月12日
+
+### 多关心家人才有温馨的家
+
+今天早上5点左右就醒了，再也睡不着，但是困得要死，几番挣扎才在5:40左右起床成功，镜中的影子失神憔悴，心生寒意。
+
+起因其实在于昨天晚上那场总算没有彻底爆发的争吵。我真的很无奈，我也从内心感到害怕，还有歉疚。原则上说，她不是一个坏人，也不是一个自私的人，归根结底，还是我的出身和我的现状，让生活脆弱不堪，稍微一丁点儿的不顺心，都会让她失去耐性。
+
+以后下班回家，尽快收拾好厨房，喂流浪猫，清理猫砂，拖地，准备泡脚的热水，早早安排全家休息。
+
+对了，平儿对毛毛真的是悉心这致，但有时候物极必反。她清洗毛毛喝水的小碟之后，一般不用纸巾擦拭，说是纸巾上有不安全的特质，经常等它自然晾干。但是昨天差点大战，我们都忘记了给毛毛加水，早上起床，毛毛跟着我，到处找水喝，最后一直低头喝了将近一分钟才罢休，真是可怜！都怪我！
+
+今天早上开车还算顺利，7:25启动，大概8:40左右到公司，但是我没有及时打卡，却忙着整理车内的物品，最后车内整洁了，突然发现已经9:00了，作的迟到！只能请一小时病假了。
+
+中午把收藏的字帖都盖章整理好了，以后专心习字，不要再到处搜索了。发现缺一本《曹全碑》，和嘉丁拿喷雾器喷壶1升，凑了一个新单。以后不会再傻傻的用水壶自己洗整车，但是发现鸟粪，还是要及时冲洗的。引擎盖上又有很多树胶，周六一早要去清洗，如果不下雨的话。
+
+2015年10月15日
