--- a/fav/diary/docs/2015-10.md
+++ b/fav/diary/docs/2015-10.md
@@ -59,3 +59,50 @@
 中午把收藏的字帖都盖章整理好了，以后专心习字，不要再到处搜索了。发现缺一本《曹全碑》，和嘉丁拿喷雾器喷壶1升，凑了一个新单。以后不会再傻傻的用水壶自己洗整车，但是发现鸟粪，还是要及时冲洗的。引擎盖上又有很多树胶，周六一早要去清洗，如果不下雨的话。
 
 2015年10月15日
+
+### 周会
+
+一会儿开会的时候，也不用过多的提我们开发事项，比如打印的项目，广州的同事并不关心。和学亮沟通一下，本同的脚本有无特别之处，择其重点谈一下就可以了。外包的东西我我讲两句。实在没有什么说的，就说本周一切正常，都是日常的维护。
+
+汇报要体现我们的工作重点，而且要学会包装，很平淡的东西，经过整理也能说出一二三四。
+
+其实每周开这个会，目的有二：
+
+1. 分析问题，如何解决的，或者为何不能解决
+2. 分享经验，这个要日常做好记录，周五的时间再包装一下即可
+
+我不喜欢开会，但既然要开，就也要学习开会的技巧。
+
+就这个周而言，京东应该还会说一说，但我们这里不用开口
+
+北京所经历的事情：
+
+1. 汇报一下脚本的数量，新增及修改的数据
+2. 典型的广告处理经验，电脑、时尚/家居可以各举一个
+3. 时尚网香奈儿数据故障
+4. 上午说的汽车网数据导入
+
+可以分条说一说。
+
+至于开发，一句带过：
+
+1. 打印项目因为进纸的问题还在最后调试
+2. 黎思和孙鹏在活动开发的间隙正在升级活动框架，先攻克 ExtJS 5 
+
+这已经是说得够详细的了。
+
+外购，我会讲讲：
+
+1. 京东的停了，相应的外购也停了，已经执行的部分，会协商付款
+2. 立邦因为多跳需求，宝洁因为页面兼容，新增排期相应外包
+3. 伊利和一号店，混了25-30%左右的IP，虽然排期长，但因为是PC端，费用不高
+
+我们两个人大概5分钟之内就可以说完，思路清晰，内容也不单薄，忙了一星期，要有得说道，不要像上海一样，几个月揉同一个问题。不过他也是没办法，实在没有内容。
+
+周报和周会，不应该完全相同，否则没有必要做两种形式。
+
+把周报邮件和周会发言的内容，集中列在一个页面，隔一段时间，进行比对，能发现我们团队的价值，是在上升，还是在下降，组织语言的能力，是否随之进步。
+
+人的提升，应该是全方位的。
+
+2015年10月16日
