--- a/fav/diary/docs/2015-10.md
+++ b/fav/diary/docs/2015-10.md
@@ -106,3 +106,89 @@
 人的提升，应该是全方位的。
 
 2015年10月16日
+
+## 第43周
+
+
+### 京东电话会议
+    
+这一轮谈判，形式为电话会议，但是事发之后双方第一次正式沟通。
+
+PConline参加人：李斯 刘惠（外场）高新 陈自新
+
+京东没有透露问题在什么地方，只是表达了三层意思：
+
+1. 促销系的广告，京东只与PConline有合作，不涉及PC旗下其它网站，力度很大，整体对PConline的效果是认可的；
+
+2. 事发之后，京东的商务部门也是在等待产品部门的数据分析结果，目前没有明示问题何在；
+
+3. 双十一是一个机会，京东也很看重，希望PConline主动推进，从 IP 、PV、UV 的有效性这个角度，提出正式的书面解释，如果能通过产品的评审，就有希望重开合作。
+
+PConline销售部已经整理出京东促销系1-9月的数据报告，计划重新梳理一下，挑选金额大的三个排期，做深入的分析，从横向和纵向两个角度，暗示京东在PConline上的投放是有效果的，但绝对不明确表示我们的数据没有问题。在整理数据的时候，可能需要数据中心协助。
+
+数据中心目前能做的，只能是做好京东重开的资源准备。
+
+李斯同时提到海尔日日顺的数据问题，数据太过整齐划一，没有任何合理的差异化，所有的点位统计，如何一个模具生产出来的甜品一样，面对这样的数据，我们想说自己没有问题，也毫无底气。
+
+2015年10月16日
+
+### 移动广告优化
+
+1\. **移动端的广告优化是一个悖论**
+
+投入低  ⇔  广告少
+
+每个人都看好移动在未来的市场，但是每个人也都怀疑小屏幕的广告效果。
+
+目前我接触的渠道还还多只能处理给出点击代码和流量代码的任务。
+
+2\. **数据的差异化**
+
+个人建议排期长、金额高的广告，注意外购的混量。
+
+往年：卡机 不达标 的广告外购
+
+现在：量不是问题了，产能已经过剩
+
+但我的呼声显然不会得到广州的认同。
+
+2015年10月16日
+
+## 第44周
+
+### 一周的平和
+
+房子 反思
+
+松下 好用
+
+2015年10月26日
+
+### 明年的口粮
+
+这段时间也要想想明年做什么项目了，近期我会征求各网客服的意见，策划一些小项目，做为2016年的口粮。
+
+为了鼓励团队的后进成员，周末策划了一个小项目，为陈总交待的校长投票做一个直观的报表，沿用活动框架，由LS担任技术指导，KXJ独立完成。
+
+需求：
+
+1. 定时任务抓取投票页面上各位校长的当前票数，存入数据库；
+2. 用ECharts直观的表现郭校长和排位前三的竞争对手的关系；
+3. 每天上午10点发送邮件，难点可能是图片的展示，如何实现？
+
+今天早上续费500元，目前大概2分钱一票，同事也询问过外面的渠道，但是：
+
+> 外面的渠道不报价 ，他们说刷票不稳定性高，不给我报。
+
+瞬间感觉我们还是很厉害的。不过，那位已经刷到11万票的校长，我太崇拜你了！
+
+我单独交待给JW的：
+
+> 让LS多和KXJ在项目上多一些接触。
+
+> 可以预计以后L在工作中承担的角色，以及待遇各方面都会超过K，这种接触可以减少一些矛盾，最重要的是让K觉得心理平衡，如果能因此激发她的斗志那就更好。
+
+这个项目只是一个引子，要尽快和北京的客服部门沟通，做好明年的计划。
+
+2015年10月26日
+
