--- a/fav/diary/docs/2015-10.md
+++ b/fav/diary/docs/2015-10.md
@@ -192,3 +192,18 @@ PConline销售部已经整理出京东促销系1-9月的数据报告，计划重
 
 2015年10月26日
 
+### VMware会议
+
+我来公司做一下上午的会议记录，就不上BQQ了，和孙宾请了一天的假。下午的专场会议不是很接地气，我就提前回来了，去这些场合的主要目的其实是开阔眼界。
+
+上午的月会效果怎么样？慢慢提高自己的演讲水平。VMware会上，除了EMC的PPT之外，其它厂商都做得很好。看来EMC被Dell收购也是有原因的。李开复的那一套演讲，我已经听完了，文库上都可以找到对应的PPT，大部分的观点的案例，都很好。
+
+伊利真很麻烦。看来像Intel之前的思路，但是Intel是高科技企业，伊利只是一个卖牛奶的。大环境不好，现在做生意都不容易，每一个行业都在压缩预算，我们想赚客户的钱，也要付出更大的代价。个人能从中学到一些沟通技巧，提升技术实力，就算是得到回报了。
+
+正常的请假都要提前一天说明情况，如果是临时的事情，要亲自打电话过来说明理由。你可以自己决定是否打电话问问。
+
+每一个小组中，都会有让你特别放心的人，这种人让你觉得心中踏实，可以去琢磨更高层次的工作，也会有让你特别头痛的人，这种人让你得到磨炼。
+
+在自己还没有上升到天花板的时候，这两种人，都是需要的。
+
+2015年10月28日
