--- a/fav/diary/docs/2015-11.md
+++ b/fav/diary/docs/2015-11.md
@@ -33,3 +33,112 @@
 梦想之旅。
 
 2015年11月13日
+
+### 两周未开车
+
+2015年北京拥堵将超极限？
+
+[凤凰专题](http://auto.ifeng.com/news/special/mrht1013/)：2015年，北京市机动车保有量将达到700万辆，平均时速低于15公里，这样的日常速度甚至比我们现在所经历的最堵时候还要低。据分析，如北京不采取相应措施，当机动车保有量达500万辆和600万辆时，高峰时段拥堵指数将达到9和9.5以上，中度以上拥堵时间5小时30分钟以上。即使继续采取限行措施，拥堵指数也仅能控制在7和8左右，中度以上拥堵时间3-4小时，交通形势十分严峻。
+
+研究中心的数据显示，北京市小汽车5公里以下出行比例超过40%。
+
+北京交通发展研究中心是北京市交通委下属的研究机构。该中心的最新调研发现，目前本市小汽车发展呈现“三高四低”特点——“三高”指高速度增长、高强度使用、高密度聚集；“四低”指北京购买车辆的门槛低、小汽车使用成本低、绿色出行意识低、替代出行方式服务水平低。
+
+北京的机动车增长从300万辆到400万辆，仅用了2年7个月，东京实现这一变化却用了12年的时间。
+
+北京小汽车年均行驶里程为1.5万公里，是伦敦的1.5倍，东京的2倍多。小汽车的高强度使用是北京交通面临的最关键问题之一。
+
+新中国首都城市规划工作的推动者、著名学者梁思成曾在日记中这样写道:“**北京城不会得感冒，但总有一天它的交通会得心脏病。**”如今，他的担忧逐渐成为现实。从2003年全市机动车保有量突破200万以来，北京开始了长达八年的“治堵”历程。然而，纵然在这八年里各种治堵措施层出不穷，时至今日，人车矛盾依然无法破解，而这注定是京城若干年内不得不面对的一大棘手难题。
+
+“梁陈方案”，是指梁思成在1950年与从英国留学归国的建筑家陈占祥共同提出的《关于中央人民政府行政中心区位置的建议》。该方案主要涉及两个方面：其一，从整体保护和疏解旧城压力的角度出发，建议中央人民政府从北京中心迁出，保留旧城中心区为历史文化区，在西郊建中央人民政府；其二，提出平衡发展城市的原则，多中心，每个区域有自己完善的工作、生活体系，防止跨区域交通带来的集中拥堵。
+
+据林洙回忆，当年毛泽东看过“梁陈方案”后说：“**有那么一个教授，要把我们从北京城里赶出去。**”
+
+对被摧毁的北京城，德国人曾有评论，我记不清原文，大意如此：
+
+我们有的，你们将来也会有，但你们有的，我们永远不可能有，而你们也不会再有。
+
+2015年11月17日
+
+### 当你老了
+
+中新网上刊载了一偏文章：《[梁思成第二任太太林洙：“我们仨”没那么复杂](http://www.chinanews.com/cul/2012/01-04/3580028.shtml)》，以前，我也相信，但从《多少往事烟雨中》中的回忆看，反观林二奶奶写他们的感情，有点给自己贴金的感觉。梁林在一起固然有痛苦，但是也是没有第二人可以代替的。
+
+我尊重林徽因，不是因为她情感世界，她的诗作散文，而是她以女子之身对中国建筑学的贡献。
+
+以下摘自：[多少往事烟雨中](http://pclib.github.io/safari/essay/past-in-the-rain/)
+
+记得林家的下午茶，有时会讨论各种问题，有时也会兴之所至地读起某位诗人的诗篇。父亲说，林徽因的博闻强记令人惊异，无论是济慈、雪莱，还是勃朗宁夫人、叶赛宁、裴多菲、惠特曼……有谁记不住、背不出的诗句，林徽因都能准确无误地出口成章。林徽因很喜欢诺贝尔奖获得者、爱尔兰诗人叶芝的《当你老了》，她用英文朗读那首诗时，在座的陈岱荪、金岳霖曾被感动得泪光闪烁。
+
+回家的那个下午，我什么话都说不出，只觉得心里压着什么，很重很重。我看着梁先生亲自打开炉筒上方的炉门，一铲一铲地往里添着煤块。那间卧室的取暖炉子很高，至少有一米二左右，梁伯伯看上去非常吃力。我去问父亲，为什么不让阿旺娘帮忙？连我也可以帮忙的。父亲轻声告诉我，梁伯伯说了，炉火是徽因妈妈的命，稍一着凉就有危险。梁伯伯一直是亲自侍弄炉子，别人弄炉子他不放心。这么多年了，都是他自己动手，时刻监视煤火的燃烧情况，决不能让煤块烧乏了。其实他自己，也患着多种疾病，由于患有脊髓灰质炎，常年穿着钢背心，但他还是竭尽全力地呵护着跟自己一样多病的妻子。正说着，梁先生走过来，从客厅炉子上一只蒸锅的金属盒子里，用镊子夹出消过毒的针头针管，放进一只白搪瓷的腰形盘子里。
+
+“又该打针了？”父亲问。
+
+梁先生抬腕看看表，点点头。
+
+梁先生拿着注射器进卧室了。无论是静脉注射还是肌肉注射，梁先生都技艺精湛，水平与专业护士不相上下，那都是长年照顾妻子练就的本领。林徽因体弱，切除过一只肾脏，有时忽然无名火起，易躁易怒，情绪激动。但梁先生永远不愠不火，轻声细语，耐心安抚。为了怕主人误会，他和父母聊了很多关于中医的医理，说起阴虚阳亢患者常有的症状。他说，健康人往往不能体会病人的状况，我也是病人，对此有切肤之痛。物质决定精神，脏器的器质性病变，真的会改变人的脾气性格，那就是病，很难用理智控制的，不然病人和健康人就没区别了。梁先生在我家常谈起他对疾病的感受，仿佛多少难言之痛都被他对妻子博大深厚的爱意融化了。
+
+“这是我见到的真正好男人，好丈夫。”一生中，我无数次听到父亲的感慨，“都说母亲对儿女的爱才是无私的，我看梁先生对林徽因的爱才是无条件的，义无反顾的。”
+
+母亲准备为客人炖她拿手的上海“腌笃鲜”。梁先生得知后，先向母亲鞠一躬，笑盈盈地做了一个很夸张的摘帽行礼动作，“夫人，可容老夫进一言？”
+
+母亲忍俊不禁，微微屈膝还礼道：“愿闻其详，请先生明示。”梁先生这才说：“徽因肾功能差，她的进食有许多禁忌，冬笋竹笋即在其中，医生要她尽量勿食笋。”母亲说：“这好办。冬笋是最后下锅的，下笋之前，先把肉汤盛一些出来就是了。”
+
+梁伯伯笑着作揖道：“善哉，有劳夫人，多谢多谢。”
+
+梁先生的幽默乐观，经常给我们家带来欢乐轻松的笑声。无论是炖好的鸡汤肉汤还是银耳汤，或是蒸好的蛋羹，梁先生总是先用小勺尝一尝冷热咸淡，觉得合适了，才端进屋里。有时就坐在床畔，一勺一勺地给林徽因喂食。母亲为此曾有感而发道：“我一辈子不羡慕谁家荣华富贵，有钱有势；最羡慕人家夫妻恩爱，相濡以沫，像梁先生夫妇那样。”
+
+当我进入知天命之年时，忽然懂得了叶芝那首《当你老了》：
+
+
+> 当你老了，头白了，睡思昏沉，
+> 炉火旁打盹，请取下这部诗歌，
+> 慢慢读，回想你过去眼神的柔和，
+> 回想它们昔日浓重的阴影；
+> 
+> 多少人爱你青春欢畅的时辰，
+> 爱慕你的美丽，假意或真心，
+> 只有一个人爱你朝圣者的灵魂，
+> 爱你衰老了的脸上痛苦的皱纹；
+> 
+> 垂下头来，在红光闪耀的炉火旁，
+> 凄然地轻轻诉说那爱情的消逝，
+> 在头顶的山上它缓缓踱着步子，
+> 在一群星星中间隐藏着脸庞。
+
+每读到这首诗，眼前就会出现目光柔和、微微躬着背，在林徽因床边忙前忙后的梁先生，那应是人间最美的画面。
+
+不久，林徽因肺部大面积感染，高烧不退，住进了同仁医院。不久，梁先生也发现被传染上肺结核而住进了妻子隔壁的病房。父亲去同仁医院探望时，命悬一线的林徽因已经气息奄奄，她只是以生命中最后的力气，用力注视着梁先生和父亲。
+
+“我只见她的嘴唇轻轻动了动，说不出话来。”父亲说，“看见她和携手一生的梁先生默默对视，久久无语，那种诀别前的相依不舍，真让人肝肠寸断。我别转头冲出门，才敢让泪水流下来。”
+
+2015年11月17日
+
+
+### 链接
+
+**微信公众号**
+
+最近这个砍价的活动又暴露出一个问题，就是微信公众号的事情。
+
+从活动一开始，我们就协商过，微信转发要读取用户信息，必须有一个微信公众号，但到现在活动快上线了，还是没有 只能借用汽车网的，在用户协议那个页面，非常不协调，但也没办法。
+
+其实极客出发那一期，最初也是计划 支付宝 + 微信 两个支付渠道的，也是因为没有公众号而放弃微信支付，而我们的程序都准备好了。 微信平台有很多新颖的活动形式，网友关注度也高，还是建议安排人手申请一个北京销售部专用的微信公众号，一年的费用300元，不然事到临头再把佛脚就不灵光了。
+
+很多新人我都不认识，只能找几张老面孔重说一下这件事。
+
+**数据库权限**
+
+上次说的那个预上线服务器，基本都弄好了，INM 也开通了，就有一个问题，执行的同事按公司的原则，不给我们开放 MySQL 权限。
+
+其实这个本质上是测试服务器，客户在测试的时候，会提交修改意见，我们就很可能要改动数据库，这种频繁的修改最好就不要麻烦 DBA 吧？
+
+而且这个数据库不会有真正有价值的数据，都是一些测试数据。
+
+亮哥，前几天我们找林浩加了一台预上线的服务器，直接在那台机器里安装了 MySQL ，目的是在项目上线之前，能给客户看到，测试并提交修改意见，我在双周会上说过的。
+
+现在有一个问题，数据库不直接对开发人员开放，但是这个比较特殊，本质上是一台有公网 IP 的测试机，我们希望自己可以操作数据库，修改方便，加班的时候，也可以不用麻烦你们操作。
+
+林浩说你这边同意了就可以。
+
+2015年11月18日
