--- a/fav/diary/docs/2015-10.md
+++ b/fav/diary/docs/2015-10.md
@@ -158,9 +158,19 @@ PConline销售部已经整理出京东促销系1-9月的数据报告，计划重
 
 ### 一周的平和
 
-房子 反思
+年中的时候，考虑到十四号线和八号线将相继通车，我们计划倾尽家产，在春节前后，购进悠胜美苑小高层一套，为些，岳家可能因此为我们担上50-100万的巨额负担，但随后就遭遇房价的节节高升，就算我们拼了老命凑首付，每个月12000的房贷，加上6000的车贷，这生活可能也无法继续。
 
-松下 好用
+但这已经是我们现在的想法。过去一个月，我们都反反覆覆，曾经有几个时刻，因为平儿坚决不同意向岳父借钱，我心中还升起些许的怨气，以为错过了这个时机，以后将会付出更大的代价。
+
+现在反思，我实在不应该怪他们。不能这样自私，将自己的贪心建议在他人的压力之上。如果我有那个能力和运气，就出手买房，没有，就再等几年，何必强求，把自己和别人的生活都搅乱。只要我不放弃，房子还是有希望的，而且，家人健康和孩子教育，远远比房子重要。
+
+附：
+
+悠胜美苑 超值南北通透复式 看房方便
+
+单价：45872元/平米
+
+升值空间大：出小区600米到即将建成的地铁14号线和地铁8号线永定门外站
 
 2015年10月26日
 
