--- a/fav/diary/docs/2015-11.md
+++ b/fav/diary/docs/2015-11.md
@@ -91,19 +91,19 @@
 当我进入知天命之年时，忽然懂得了叶芝那首《当你老了》：
 
 
-> 当你老了，头白了，睡思昏沉，
-> 炉火旁打盹，请取下这部诗歌，
-> 慢慢读，回想你过去眼神的柔和，
+> 当你老了，头白了，睡思昏沉，<br/>
+> 炉火旁打盹，请取下这部诗歌，<br/>
+> 慢慢读，回想你过去眼神的柔和，<br/>
 > 回想它们昔日浓重的阴影；
 > 
-> 多少人爱你青春欢畅的时辰，
-> 爱慕你的美丽，假意或真心，
-> 只有一个人爱你朝圣者的灵魂，
+> 多少人爱你青春欢畅的时辰，<br/>
+> 爱慕你的美丽，假意或真心，<br/>
+> 只有一个人爱你朝圣者的灵魂，<br/>
 > 爱你衰老了的脸上痛苦的皱纹；
 > 
-> 垂下头来，在红光闪耀的炉火旁，
-> 凄然地轻轻诉说那爱情的消逝，
-> 在头顶的山上它缓缓踱着步子，
+> 垂下头来，在红光闪耀的炉火旁，<br/>
+> 凄然地轻轻诉说那爱情的消逝，<br/>
+> 在头顶的山上它缓缓踱着步子，<br/>
 > 在一群星星中间隐藏着脸庞。
 
 每读到这首诗，眼前就会出现目光柔和、微微躬着背，在林徽因床边忙前忙后的梁先生，那应是人间最美的画面。
