--- a/fav/diary/docs/2015-11.md
+++ b/fav/diary/docs/2015-11.md
@@ -142,3 +142,95 @@
 林浩说你这边同意了就可以。
 
 2015年11月18日
+
+## 第48周
+
+### 再次刮蹭
+
+早在上望陶园门口会车的时候，又把车给蹭了一下，左后车门一的棱线处，一道长长的白印，左后翼子板也有轻伤。
+
+事故原因：**心急，只顾盲目向前挤，没有观察后视镜**。
+
+双方下车，可能对方发现亦无大碍，主动提议各自走人，走保险修车。这种事故的责任判断，预计各50%，但于我自己，则是百分之百的痛苦。
+
+现在已经好多伤了，这车跟了我，也不是一个好的选择。
+
+昨天晚上因为房子的事情，又和平儿急了，当真家反宅乱。
+
+其实前一段时间读易经，我已暗自叮咛自己，天行健，但是仍未能将谦卦应用于生活。
+
+今天起床时间不到五点，但是头痛目眩，因昨晚未休息好。六点半出门买早点，路上行人已甚多，行色匆匆，每一位都在努力，我不过微尘一粒。
+
+家反宅乱例句：
+
+计氏不肯降心，珍哥不肯逊让，晁大舍虽然有财有势，如此家反宅乱，也甚不成人家。
+
+---- 清·西周生《醒世姻缘传》第一回
+
+反面：家和业兴
+
+2015年11月27日
+
+## 第49周
+
+### 昌平之行
+
+周日去看平儿的同学，从她们家开车到我们家，64公里。
+
+平儿在京没有什么熟人，此行了她一件心事。平儿待人实诚，除了红枣水果，千里之外寄来的菜籽油，也送了一壶。点赞。
+
+除了地段偏僻，龙山华府的房子也还真的不错，宽敞明亮，关键是他们买的时候，房价还在1.5万左右，那是2012年，我们还在为月供发愁。
+
+中午在她家附近的餐厅吃饭，平儿点了凉拌豆苗很美味。
+
+得知我们也想买房，下午他们很热心的带我们去附近看房，关键是她同学春节就要生产了，我们很感激。看了两处楼盘，第一家只剩下别墅，1200万，无言；第二家北京风景，125平和135平的样板房都还不错，看到大房子的瞬间我也心潮澎湃，但90万的首付和1万的月供，买在这么老远的地方，还是心有不甘。
+
+回城的时候，我顺带捎他们夫妻到百度软件园。G6南下方向，已经堵红，我们选择G7，六环外的高速没有路灯，飞驰的大货车，至今让我心有余悸。还没进城，我们都在内心放弃了昌平购房的想法。
+
+今天我的车两次意外受伤，情绪也很低落，车要且练，判断和应变能力，也要提高。早上洗车和晚上进中关村，都等了太久。
+
+而且如果早上事先观察以排队困难水压不稳，左前翼子板也不会划伤。但是生活虽然远比电视剧精彩，却没有重播，谁也没有长前后眼睛，睿智的人，活得更为优雅。
+
+吃饭的时候，平儿和她同学坐在我的对面，明显感觉平儿比她同学苍老很多，年龄也只大了半岁而已，对方还是一个即将临产的孕妇。
+
+内心阵阵伤痛。平儿不耐老，固然和她的性格有关，我，和我固有的家庭，才是最大的杀手。这一辈子，我再怎么努力，都无法回报她的付出。我很惭愧。
+
+易经说，天行健，君子以自强不息，以前只是觉得文法很好，从今往后，我要真正以它作为自己的信条。
+
+今天早晨在电梯里听到两位同事对话，问今天没开车？答开不起，每天60公里，来回。我才意识到我真的是住得太远了，每天56公里，却开得很欢。
+
+努力，在公司近一些的城内，购置一套像样的住房，两年，三年，或者五年。
+
+注：乐之道没洗成车，最后走三环到赛浪洗的，办了一张会员卡，1500块，七折优惠，原价70元一次。
+
+2015年11月30日
+
+### 我可怜的车
+
+今天开了 1小时 44 分，很多住在郊区的人，周一开车进城，7点不到，进四环的路口就排队。一辆银色的小客，追尾一台黑色的福特，行车更加缓慢。这是四天以来我看见的第三次尾追事故。
+
+周五晚上在蓝靛场南路，一辆银色的小客车，被一台黑色的轿车从三厢撞成了两厢。周六下午在牛街附近，一辆出租撞到前面的黑色小客，出租车引擎盖上翘。
+
+周日晚上从昌平开车60多公里回家，在路上还看到一条新闻：昨天早晨7点左右，山西大运高速公路运城到侯马段，距侯马9.3公里处发生一起特大交通事故，共有47辆车连环相撞，目前已造成4死5伤。
+
+早上行车定慧桥附近，发现一辆大货车停在路中央，没有任何任何警示牌，左后的轮胎已是半脱落状态。四环上各种让人目不忍视的小面包，依然跑得很欢，不知道什么时候就会有一辆新车跟着遭殃。国家的繁华只是表象，否则路上不会有这么多令人心惊肉跳的破车。
+
+我自己的车，一周之内接连受损，原先还未愈合的伤口，又重重的划上一刀，也许这样一直流着血，就感觉不到疼了。半年了，车况整体不错，它对得起我，我对不住它。
+
+新增的伤痕：
+
+1. 周五早上，望陶园会车，左后车门划伤，露了底漆；
+2. 周日早上，排队洗车，我一直紧张的防着右后方被擦伤，最后却发现左前翼子板被人划出了底漆，具体是送快递的，还是小推车，我都没看清楚；
+3. 周日晚上，晚车场的时候，打轮太晚，我感觉左前方碰到水泥墩子了，开始还以为是车轮，后来突然意识到，那个高度撞到的肯定是前保险杠，果然能摸到一点凹陷。
+
+第二次走高速，感觉很不好，我还是觉得在北京城内的三环、四环上开车踏实。
+
+延伸阅读：
+
+团雾是因局部水汽受辐射降温而引起。当低层水汽条件比较好的时候，团雾比较容易出现，尤其是雨后一到两天，如果天气晴好就容易出现。与市区相比，郊区和乡村地带容易出现团雾，尤其是部分比较空旷的高速公路路段。
+
+由于“团雾”预测预报难、区域性很强，车辆难以提前得到通知或警示，等驾驶员意识到有雾的时候，已进入团雾中心了，有时驾驶员刚从一团雾中出来，可下一团雾却又在不经意间降临，让人防不胜防，常常酿成重大交通事故，因此团雾被称为高速公路上的“流动杀手”。
+
+据统计，雾天发生交通事故的概率比平常高出几倍，甚至几十倍，因浓雾、团雾造成多车连续追尾事故屡有发生，损失严重，极具杀伤力。
+
+2015年11月30日
