--- a/fav/diary/docs/2015-12.md
+++ b/fav/diary/docs/2015-12.md
@@ -1,11 +1,66 @@
 # 日志 - 乙未年 戊子月
 
-吾善度材，视栋宇之制，高深圆方短长之宜，吾指使而群工役焉。舍我，众莫能就一宇。故食于官府，吾受禄三倍；作于私家，吾收其宜大半焉。
+## 第50周
 
-彼将舍其手艺，专其心智，而能知体要者欤！吾闻劳心者役人，劳力者役于人。彼其 劳心者欤！能者用而智者谋，彼其智者欤！是足为佐天子，相天下法矣。物莫近乎此也。彼为天下者本于人。其执役者为徒隶，为乡师、里胥；其上为下士；又其上 为中士，为上士；又其上为大夫，为卿，为公。离而为六职，判而为百役。外薄四海，有方伯、连率。郡有守，邑有宰，皆有佐政；其下有胥吏，又其下皆有啬夫、 版尹以就役焉，犹众工之各有执伎以食力也。
+### 小学同学
 
-彼佐天子相天下者，举而加焉，指而使焉，条其纲纪而盈缩焉，齐其法制而整顿焉；犹 梓人之有规、矩、绳、墨以定制也。择天下之士，使称其职；居天下之人，使安其业。视都知野，视野知国，视国知天下，其远迩细大，可手据其图而究焉，犹梓人 画宫于堵，而绩于成也。能者进而由之，使无所德；不能者退而休之，亦莫敢愠。不炫能，不矜名，不亲小劳，不侵众官，日与天下之英才，讨论其大经，犹梓人之 善运众工而不伐艺也。夫然后相道得而万国理矣。
+最近一年，我记不清有多少次梦见上学了，想看看《梦的解析》，这到底是在预示什么，却苦于没有时间。
 
+昨天晚上又梦到几位小学同学：
+
+* 杨旭
+* 黄本利
+* 卢明学
+* 郭贤江
+* 郭金普
+
+除了知道郭贤江在洛阳当大学教师之外，其它的音信全无，不知他们都安好？
+
+我手机上有陈先思的号码，某一年春节，我们在六佬家吃饭的时候，听说他和郭贤江有联系，通过他应该能找到郭。只是不清楚将近20年不见，即便联系上了，还能否找到共同的话题？
+
+2015年12月7日
+
+### 你会开车吗？
+
+下午去了一趟世纪金源，没有直接走四环，按导航的三环摸索，却又走错了路，最后经板井路拐进了**远大东路**，会车很痛苦，最后在好心人的指引下，艰难通过。
+
+路边儿的大爷一语中的：技术不行。
+
+走过最窄处，我心中几乎一片空白，车子飘飘荡荡，后边儿一个司机追上来：你会开车吗？
+
+唉，我的真的不会开。
+
+下次再去的话：
+
+1. 三环 → 长春桥路 → 远大路
+2. 板井路 → 四环 → 远大路
+3. 紫竹院路 → 四环 → 远大路
+
+直接走四环，在某个桥下掉头，应该也能直通远大路，反正短期内，远大东路、远大中路，还是不要走了。
+
+下次出门到陌生的地点，一定要先查地图。
+
+2015年12月7日
+
+### 小学生必背古诗70首
+
+Kindle 中发现这本小册子，惭愧，至少一半以上我不能背诵，何谈钻研《全唐诗》？
+
+摘取最爱一首：
+
+**小儿垂钓**
+
+唐·胡令能
+
+
+> 蓬头稚子学垂纶，<br/>
+> 侧坐莓苔草映身。<br/>
+> 路人借问遥招手，<br/>
+> 怕得鱼惊不应人。<br/>
+
+百度文库中有很多70首的打印版，我就不浪费纸张了，这几天（8-10）红色警戒，都单双号限行了。
+
+2015年12月8日
 
 
 
