--- a/fav/diary/docs/2015-12.md
+++ b/fav/diary/docs/2015-12.md
@@ -169,6 +169,68 @@ Kindle 一直在推荐这本书。
 
 2015年12月14日
 
+### 不是最后一次
+
+上周末因为手机的事情，闹得天翻地覆，我们都希望这是人生的最后一劫，以后再要不要冲突了：
+
+1. 微笑
+2. 按时吃饭
+3. 禁争执
+4. 不熬夜
+5. 战胜拖延
+6. 不许大声说话
+7. 控制玩手机的时间
+
+但是周三晚上，收到从老家寄来的鸡蛋和豆腐，本来非常开心，但可能是你贪嘴吃了未炒的盐菜，闹了两次肚子，又正好我在白天看到书上说有人因为歇斯底里症而拉肚子，早年还听说过神经性肠炎，我就做为科普知识和你说了两句，本意是人的精神状况对健康的影响非常大，但你一口咬定我是在说你得了这种病，你只承认多年拉肚子是因为学校的饭菜不卫生。我连接止声，并不断的轻声解释，你仍气愤难平，再次扯下窗帘，并扬言不惜废了这双手也要砸破玻璃。
+
+我绝望得恨不能用刀戳乱自己的头颅和心脏。
+
+一刻钟之后，我想着那窗帘的杆子横在门口，如果不重新装好，半夜或者早上起来都不方便，于是挣扎起身，将窗帘重新安好。因为身体和双手都没有力气，几乎用了二十分钟才装好。那杆子经过几次摧残，已经变形严重，从客厅看，开始漏光了。
+
+无法入眠。我坐在厨房的地面上，怎么努力也止不住泪水。我恨我自己。
+
+还是毛毛过来安慰我，我抱起她，终于失声痛哭，我对不起她。
+
+2015年12月16日
+
+### 麦当劳
+
+一天神不守舍。
+
+只完成《唐风宋韵集大音版》，以大音版《唐诗三百首》，和《南渡北归》的文件重命名，并更新ID3信息。同时补全《中国文学标准朗读》系列的《古文篇》。
+
+我想还是我自己做得不够好。
+
+整理台式机的文件，发现仲维维演播的《张骞》，于是又复习了那一段历史。
+
+张骞和胡妻尚能恩爱一生，正史记载：
+
+> 留岁余，单于死，左谷蠡王攻其太子自立，国内乱，**骞与胡妻及堂邑父俱亡归汉**。
+
+我想关键还是因为他：
+
+> 骞为人强力，宽大信人，蛮夷爱之。
+
+汉书记载：
+
+> 骞孙猛，字子游，有俊才，元帝时为光禄大夫，使匈奴，给事中，为石显所谮。自杀。
+
+可叹，但毕竟有后，且俊才。
+
+周四，用微信支付，麦当劳满25减10元，我点了自己最爱的麦辣鸡翅和麦辣鸡腿堡，付款15元。
+
+回到家，才发现平儿给我留了菜，并有短信：
+
+> 有菜，回来下面条吃。
+
+2015年12月17日
+
+
+
+
+
+
+
 
 
 
