--- a/fav/diary/docs/2015-12.md
+++ b/fav/diary/docs/2015-12.md
@@ -225,6 +225,36 @@ Kindle 一直在推荐这本书。
 
 2015年12月17日
 
+## 第52周
+
+### 工作居住证
+
+本科毕业之后，太平洋网络任职至今，2007年之前做网络编辑，之后转攻软件开发，建立起北京分公司的研发团队。
+
+起初致力于办公自动化的研发，开发了商户管理系统、店铺查询系统、会议室预定系统和工单管理系统，积累了无纸化办公的经验，提高效率，也有利于环保。
+
+2009-2012年，重点负责公司旗下母婴类产品的开发工作，担任太平洋亲子网产品库、健康库的项目经理，产品库是亲子网内容的基石。
+
+2013年至今，负责北京分公司广告业务的技术优化，新广告研发，和客户支持，同时服务于IT、汽车、时尚、亲子四大行业的一线客户。
+
+2015年12月22日
+
+### 平安夜
+
+下午去当代商城领了凯得宝的盖子，237 元，真的贵，不过谁让我家庭不睦呢？家反宅难。
+
+平安夜，整个中关村大街，就是一个巨大的停车场。我越看越是不敢开车，怎么办？
+
+回来的路上遇到康经理，为我争取了一点时间，办好了2016年第一季度的停车证，840元。
+
+身体状况还是不太好，练了半小时的字，手心全是汗，以致于到最后都不知道怎么捉笔了。永生730经验证没有漏水，再次清洗收起。用英雄100写字，难度是最高的，出厂的时候，笔尖没有打磨好，全靠我以后的书写了。发现荒废日久，永字的竖笔，已经写不直了。
+
+古文观止的六朝唐文卷，听到第三遍。六朝文一反汉风，空灵闲散。
+
+今天才知，李白的文章，也是写得很好的。
+
+2015年12月24日
+
 
 
 
