--- a/fav/diary/docs/2016-04.md
+++ b/fav/diary/docs/2016-04.md
@@ -13,6 +13,10 @@
 昨天的检查结果，在已经受伤的心，又重重的补上一刀，换谁都会跳起来。
 尽管如此，她还是为我准备好了第二天的菜，把厨房收拾干净，垃圾打包，累的直不起腰。得妻如此，夫复何求！
 
+### 平儿的讨伐
+
+父母什么都为子女做好，子女会失去自立的能力！爱人什么都为另一半儿做好考虑好，另一半儿也失去了爱人的能力！同样，结果往往还伴随着受益者的不领情和倒打一耙！
+
 2016年4月15日
 
 
