--- a/fav/diary/docs/2016-04.md
+++ b/fav/diary/docs/2016-04.md
@@ -17,6 +17,14 @@
 
 父母什么都为子女做好，子女会失去自立的能力！爱人什么都为另一半儿做好考虑好，另一半儿也失去了爱人的能力！同样，结果往往还伴随着受益者的不领情和倒打一耙！
 
+### 陈氏杰出人物
+
+陈垣
+
+陈布雷
+
+陈诚
+
 2016年4月15日
 
 
