--- a/fav/diary/docs/2016-04.md
+++ b/fav/diary/docs/2016-04.md
@@ -17,6 +17,70 @@
 
 父母什么都为子女做好，子女会失去自立的能力！爱人什么都为另一半儿做好考虑好，另一半儿也失去了爱人的能力！同样，结果往往还伴随着受益者的不领情和倒打一耙！
 
+### 近期北京的状况
+
+今天的研发中心双周会议，我在报告上罗列了三个活动，一个抽奖游戏，另外两个都是数据对接，类似这样的项目，无论销售还是开发，早已司空见惯，2015年全年，我们做了这样的活动94个。
+
+![](http://imgad0.pclady.com.cn/ivy/image/20164/15/14607061051400.png)
+
+没有新意，也没有困难，于是每一次的会议，我都说北京无事，丛先生笑说，如果希望广州也能这样。
+
+而事实上北京研发的状况远没有这么轻松，我只能苦闷中苦笑。即使是活动，也有背后的辛酸：需求同质，时间紧迫，反复修改，更重要的是，无人访问。而广告的优化，更是如芒在背。
+
+时间过得很快，2015年的6月25日，我去广州出差，参加半年工作汇报，当时正好王健强去广州辞行。在广告数据中心的小会上，丛先生说知道北京的艰苦，前线支持的压力，和维系团队的不易。听到这些话时候，我觉得自己的眼泪都快落下来了。但当时的情况可能还稍好，跟我一起工作五年的赵玮离职了，但是我们新招的黎思和孙鹏，都是非常优秀的种子，另有两位同事天资稍逊，但正好有适合他们的工作，即脚本编写。
+
+我以为这样的队伍结构至少可以再维持两年，以度过说了好多年的经济低谷。但2016年的春节刚过，高学亮因为个人原因，在服务太平洋三年之后，选择去了深圳；另外一位和黎思前后入职的同事，认为广告脚本编写不合自己职业规划提出离职。在北京招人困难，因为我们的公司寂寂无名，部门小，人员少，无核心项目，而招一个能优化广告数据人，就更难了。
+
+无奈之下，我调孙鹏接替脚本工作，他本是比黎思更有前途的开发人员，只是沟通能力弱一些。希望通过他的加入，利用过去一年在浏览器插件、自动化注入数据和广告监测研究的经验，改变我们大概沿用了七年的脚本编写套路。目前已经初见成效。
+
+然而孤立的黎思显得更加形单影只，一方面是重复性的活动开发，另一方面是对自动注入线索量（2016年开始移交给徐荣）的压力，导致她个人进步的迟缓和工作心态的烦闷，如果不是MGR的开发和ExtJS研究的成果，她可能还呆不到现在。但创业公司高薪水和新技术的诱惑，还是让她产生了分心。
+
+我明白这个地球其实离了谁都可以运转，但黎思是可以一手包揽除广告之外所有售前工作的难得人才，高效灵活，善于沟通，与客户的电话往来和现场会议，都很得体，且修改需求随叫随到，在家也联网远程更新。因为全面了解公司大部分的系统，且认真负责，很多销售同事都习惯性的找她处理本应属于前端开发的工作。
+
+我和健炜都希望公司能留下黎思，打理前方，我们可以安心的优化广告，安排外购，配合孙鹏做脚本编写新方案的后台开发工作。且公司对外购经费的管理越来越重视，这个系统也需要我们信得过的人来维护。况且，如果六个人的小组流失一半，先不说我个人难辞其咎百口莫辩，对健炜和孙鹏都是信心的打击。
+
+我尽我所有努力，希望我的同事认为公司关心我们成长，我们可以负责有价值的项目开发，申请Apple设备就是其中之一，感谢丛先生信任。
+
+接下来的Q2、Q3，我希望能完成脚本编写的革新，并发掘北京销售在日常工作中的需求，开发有用的工具提高工作效率，之前的OA草稿插件，自动注入评论，日历共享，打印银行进账单，查找页面监测，都是小巧而实用的工具。目前在构思中的项目有在线的Excel协作工具，自动Referer接口，和自己开发的多平台流量监测工具（用CNZZ、百度统计监测外购数据，风险很大）。
+
+金三银四的招聘，只收获了一名适合我们工作环境的前端开发，现正在跟随孙鹏学习JavaScript高级开发，希望未来能承担广告优化工作，目前看起来很不错，有潜力也有能力。给孙鹏一个带人的机会，也有助于他的成长。
+
+Java软件工程师的招聘，一个月以来，我们收到了300多封简历，但整体质量非常之差，80%以上的，都不能准确而客观的说清自己会什么，或者做哪些有价值的产品。我从中挑选的40多个感觉合适的人，实际来面试的又不到一半，而能将我的那套非常简单的笔试题目答得像个样子的人，凤毛麟角。我一度怀疑自己的题目方向或者难度有问题，特意找了孙鹏和黎思测试选择题，19道只错1-2题。
+
+我抱怨51Job和智联招聘的简历太差，希望HR能在拉勾、100offer这些互联网人才集中的招聘平台上发布信息，但HR说，已经在拉勾上发布了，无人问津。
+
+所有面试人员，我和HR满意度最高的，是一名只有高中学历的安徽阜阳人，杨凯，1994年出生，基本功扎实，上机操作也很对路，HR也认为综合素质没问题，而且很踏实。至于为何没有统招大专的学历，他也很坦诚：
+
+> 高中毕业他考上了一所大学，当然不是很好，家里出了一些事，他就弃学外出打工了，做的是电力维修。有一次，他敲开了报障客户的门，对方问他是做什么的，他说，我来给你们家修电的。客户就说，我还从来同有见过这么年轻就干这一行人电工。
+> 
+> 这件事件可能深深的触动了他，于是他放弃了工作，报考北京语言大学网络学院，学习技术机科学与技术，参加北大青鸟的Java培训。之后就开始了艰苦的找工作历程。
+
+我听说过张小姐因为员工素质问题，硬性要求新招职员必须是统招大专以上文凭，我个人也是非常赞成的，毕竟现在高校扩招，上一所国家认可的大家不再困难，一个人的学历也代表他在学校学习的态度，和学习能力。
+
+但我想每个人可能都有自己不愿为外人道的历史，北京研发中心实际所处的环境，可能也需要俯身接纳一些技术比学历好的人才。虽然只有六个人，我也坚持人才之间要有梯度，能力有梯度，相应的报酬也才可能布置梯度。孙健炜忠厚踏实，技术过硬，为公司任劳任怨，在待遇上我们自然要优先照顾。黎思和孙鹏包括孙宾也认同都是极好的苗子，我们也不能亏待，就算有幸能再招进一个各方面都完美的人，是否认可这个环境，能否给到对等的薪水，都是问题。七月的调薪，我就压力太大了。
+
+杨凯作为一名高中毕业生，英文水平比最近面试的所有大专/本科都要好，还写得一手好字，以往的工作经历也练就了他的沟通能力。笔试的时候，因为公司没有空的会议室，和前台坐在一起答题，也能正常的挥，都是我极力推荐的原因。希望丛先生考虑特批。
+
+深夜无眠，絮絮叨叨，浪费大家时间了，简单的小结一下：
+
+1. 双周会我只是取听广州的经验和动向，北京的小项目一般不值得汇报；
+2. 活动开发是一个非常尴尬的职位，找一个合适的人很不容易；
+3. 外在的经济环境，公司内部的问题，让北京的团队维系更加困难；
+4. 黎思是可造且可用之才，希望公司能留下她，也有助于稳定人心；
+5. 两个离职补招的任务，我只完成了一个指标，目前看来不错；
+6. 申请特批杨凯以高中学历加入我们的团队，交给黎思学习带人；
+7. 我会继续以最饱满的精力撑住开发和广告工作，做出有价值的产品和服务。
+
+
+
+
+
+
+
+
+
+
+
 ### 陈氏杰出人物
 
 陈垣
