--- a/fav/diary/docs/2016-04.md
+++ b/fav/diary/docs/2016-04.md
@@ -21,7 +21,7 @@
 
 今天的研发中心双周会议，我在报告上罗列了三个活动，一个抽奖游戏，另外两个都是数据对接，类似这样的项目，无论销售还是开发，早已司空见惯，2015年全年，我们做了这样的活动94个。
 
-![](http://imgad0.pclady.com.cn/ivy/image/20164/15/14607061051400.png)
+<img src="http://imgad0.pclady.com.cn/ivy/image/20164/15/14607061051400.png" />)
 
 没有新意，也没有困难，于是每一次的会议，我都说北京无事，丛先生笑说，如果希望广州也能这样。
 
