--- a/fav/diary/docs/2016-01.md
+++ b/fav/diary/docs/2016-01.md
@@ -30,7 +30,7 @@
 
 ### 给老杨的汇报
 
-我昨天在写年络总结的PPT呢，盘子太小，只能把大事拆开了说，把小事儿放大了说。
+我昨天在写年终总结的PPT呢，盘子太小，只能把大事拆开了说，把小事儿放大了说。
 
 老杨：我还好，应该说比较平淡。比以前忙些，但是还没出什么成果。
 
