--- a/fav/diary/docs/2016-05.md
+++ b/fav/diary/docs/2016-05.md
@@ -70,6 +70,6 @@
 2. 活动/MGR 后台EXT升级 √功能增强 持续
 3. AD Tracker 监测分析 √
 4. BetaGo 新脚本编写工具 5月-7月
-5. SPA 特殊广告位'管理系统 5月
+5. SPA 特殊广告位管理系统 5月
 6. AutoHref 自动内页来源 6月
 7. Count37 全平台广告计数器 7-9月
